--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
-  --bs-body-color: #212529;
+  --bs-body-color: #d63384;
   --bs-body-bg: #fff;
 }
 
