--- a/css/styles.css
+++ b/css/styles.css
@@ -236,11 +236,11 @@ sup {
 }
 
 a {
-  color: #1abc9c;
+  color: #d63384;
   text-decoration: underline;
 }
 a:hover {
-  color: #15967d;
+  color:#d63384;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
